# graphql_django

./: Makefile  manage.py  pyproject.toml
graphql_django/: asgi.py  settings.py  urls.py  wsgi.py
graphql_django/contact/: apps.py  models.py  schema.py  tests.py  urls.py  views.py
graphql_django/contact/migrations/: 0001_initial.py
graphql_django/users/: admin.py  apps.py
graphql_django/users/migrations/: 0001_initial.py
templates/: login.html
templates/contact/: list.html
