[tool.poetry]
name = "graphql-django"
version = "0.1.0"
description = "Test app for studing graphene, DRF and graphql"
authors = ["yuriy.kormin <yuriy.kormin@gmail.com>"]
readme = "README.md"
packages = [{include = "graphql_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
graphene-django = "^3.0.0"
django-graphql-jwt = "^0.3.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
django-extensions = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
